Fix #241: Set overflow-x on statuses to auto

--- a/standup/status/static/less/style.less
+++ b/standup/status/static/less/style.less
@@ -536,7 +536,7 @@ input[type='text'],
         line-height: 140%;
         margin-right: 40px;
         width: 430px;
-        overflow-x: scroll;
+        overflow-x: auto;
 
         img {
           max-width: 430px;
